--- a/CleanArch/CleanArch.Mvc/appsettings.json
+++ b/CleanArch/CleanArch.Mvc/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-CleanArch.Mvc-A51C9D2F-7B93-490D-9A6D-9CECFC1078B7;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "UniversityIdentityDBConnection": "Server=DESKTOP-HUOHUFQ\\SQLEXPRESS;Database=UniversityIdentityDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
